Add css to header

--- a/cloneSite.html
+++ b/cloneSite.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header class="1-header">
+    <header class="I-header">
         <nav class="bd-grid">
             <a href="#" class="nav_logo">AirPodsPro</a>
 
@@ -30,7 +30,7 @@
     </header>
 
     <!-- HOME -->
-    <main class="1-main bd-grid">
+    <main class="I-main bd-grid">
         <section class="home">
             <div class="home_data">
                 <h1 class="home_title">AirPods Pro</h1>
@@ -46,11 +46,38 @@
 
             <div class="home_scroll">
                 <span class="home_scroll-text">Scroll down for more</span>
-                <a href="#1-section"><img src="icons/bx-mouse.svg" alt="mouse" class="home_scroll-icon"></a>
+                <a href="#I-section"><img src="icons/bx-mouse.svg" alt="mouse" class="home_scroll-icon"></a>
             </div>
         </section>
 
         <!-- DETAILS AIRPODS -->
+        <section class="I-section"f>
+            <div class="details">
+                <div class="details_content">
+                    <div class="details_box">
+                        <span class="details_initial">Mas ds</span>
+                        <h3 class="details_title">24<span> 시간</span></h3>
+                        <p class="details_description">de bateria con<br> el estuche de carga</p>
+                    </div>
+                    <div class="details_box">
+                        <span class="details_initial">Hasta</span>
+                        <h3 class="details_title">5<span> 시간</span></h3>
+                        <p class="details_description">de bateria con<br> una sola carga</p>
+                    </div>
+                    <div class="details_box">
+                        <span class="details_initial">solo</span>
+                        <h3 class="details_title">15<span> 분</span></h3>
+                        <p class="details_description">de carga equivalen<br> a hasta 3 horas de<br> audio</p>
+                    </div>
+                </div>
+
+                <div class="details_img">
+                    <img src="img/airpods.png" alt="airpods" class="airpods">
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- GSAP -->
 </body>
 </html>
