Add animation methods to Image (Mobile M - 375px size)

--- a/cloneSite.html
+++ b/cloneSite.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +11,12 @@
     <!-- HEADER -->
     <header class="I-header">
         <nav class="bd-grid">
-            <a href="#" class="nav_logo">AirPodsPro</a>
+            <a href="#" class="nav_logo">AirPods Pro</a>
 
             <div class="nav_menu" id="nav_menu">
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="#" class="nav_link">Description</a></li>
-                    <li class="nav_item"><a href="#1-section" class="nav_link">Specifications</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">개요</a></li>
+                    <li class="nav_item"><a href="#1-section" class="nav_link">제품 사양</a></li>
                 </ul>
             </div>
 
@@ -24,7 +24,7 @@
                 <div class="nav_toggle">
                     <img src="icons/bxs-chevron-down.svg" alt="bxs-chevron-down">
                 </div>
-                <a href="#" class="nav_btn">구입</a>
+                <a href="#" class="nav_btn">구입하기</a>
             </div>
         </nav>
     </header>
@@ -55,19 +55,19 @@
             <div class="details">
                 <div class="details_content">
                     <div class="details_box">
-                        <span class="details_initial">Mas ds</span>
+                        <span class="details_initial">최소</span>
                         <h3 class="details_title">24<span> 시간</span></h3>
-                        <p class="details_description">de bateria con<br> el estuche de carga</p>
+                        <p class="details_description">완전히 충전된 케이스를<br>사용해 여러 번 충전하는<br>경우의 전체 음악 감상</p>
                     </div>
                     <div class="details_box">
-                        <span class="details_initial">Hasta</span>
-                        <h3 class="details_title">5<span> 시간</span></h3>
-                        <p class="details_description">de bateria con<br> una sola carga</p>
+                        <span class="details_initial">최대</span>
+                        <h3 class="details_title">4.5<span> 시간</span></h3>
+                        <p class="details_description">한 번 완전히 충전했을<br>때의 음악 감상 시간</p>
                     </div>
                     <div class="details_box">
-                        <span class="details_initial">solo</span>
-                        <h3 class="details_title">15<span> 분</span></h3>
-                        <p class="details_description">de carga equivalen<br> a hasta 3 horas de<br> audio</p>
+                        <span class="details_initial">약</span>
+                        <h3 class="details_title">1<span> 시간</span></h3>
+                        <p class="details_description">5분 충전했을 때<br>감상 시간</p>
                     </div>
                 </div>
 
@@ -79,5 +79,8 @@
     </main>
 
     <!-- GSAP -->
+
+    <!-- Main-->
+    <script src="main.js"></script>
 </body>
 </html>
