--- a/cloneSite.html
+++ b/cloneSite.html
@@ -35,7 +35,7 @@
             <div class="home_data">
                 <h1 class="home_title">AirPods Pro</h1>
                 <p class="home_description">편안한 착용감을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐
-                     새로운 수준의 인이어 헤드폰, AirPods Pro를 만들었습니다. <br><!-- GSAP -->유선에서 해방되다.</p>
+                     새로운 수준의 이어폰, AirPods Pro를 만들었습니다. <br><!-- GSAP -->유선에서 해방되다.</p>
             </div>
 
             <div class="home_img">
@@ -79,6 +79,7 @@
     </main>
 
     <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 
     <!-- Main-->
     <script src="main.js"></script>
